syntax = "proto3";

option csharp_namespace = "Obligatorio.ServerInstafoto";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  // Registers a user
  rpc RegisterUser (UserRpc) returns (ActionResponse);
  // Deletes a user
  rpc RemoveUser (UserRpc) returns (ActionResponse);
  // Modifies a user
  rpc ModifyUser (UserUpdate) returns (ActionResponse);
  // Returns a user list
  rpc ListUsers (ListRequest) returns (UserList);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message UserRpc {
	string name = 1;
	string password = 2;
}

message ActionResponse{
	string message = 1;
}

message UserList{
	repeated string users = 1;
}

message UserUpdate{
	string name = 1;
	string newName = 2;
	string newPassword = 3;
}

message ListRequest{}